--- a/style.css
+++ b/style.css
@@ -22,16 +22,16 @@
 body {
     margin: 0;
     background-color: var(--purple-100);
-    font-family: 'Work Sans';
+    font-family: 'Work Sans', sans-serif;
 }
 
 .banner {
-    height: 320px;
+    height: 20rem;
 }
 
 .banner__img {
     object-fit: cover;
-    object-fit: center;
+    object-position: center;
     width: 100%;
     height: 100%;
 }
