--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 }
 
 body {
+    font-size: 16px;
     margin: 0;
     background-color: var(--purple-100);
     font-family: 'Work Sans', sans-serif;
@@ -41,6 +42,7 @@ body {
     padding-inline: min(8%, 2.5rem);
     padding-block: clamp(1px, 1vw, .75rem);
     margin-block-start: -160px;
+    margin-block-end: min(5vw, 2.5rem);
     max-width: min(37.5rem, 90%);
     background-color: var(--white);
     border-radius: 10px;
